# DenovoFusion

./: CMakeLists.txt  DenovoFusion  LICENCE  Patch_note.md  README  README.md  known_fusions.tsv  main.cpp  test.sh
Fasta_Cut_source/: CMakeLists.txt  Fasta_Cut  README.md  main.cpp
R_scripts_figures_calculation/: Benchmark.R  Components_analysis.R  HMF_toolkit.R  Pie_chart.R  Statistics.R  pie chart and chromosome drawing.R
R_scripts_for_figures_calculation/: Breakpoints_analysis.R  Function_domain.R  Heatmap.R
Simulated_data/: Create_sim_data.py  README.md
src/: aligned_coord_pair.cpp  aligned_coord_pair.h  alignment.cpp  alignment.h  alignments_chosen.cpp  alignments_chosen.h  annotation.cpp  annotation.h  bowtie2.cpp  bowtie2.h  breakpoint.cpp  breakpoint.h  candidate_group.cpp  candidate_group.h  common.h  coord_pair.cpp  coord_pair.h  coverage.cpp  coverage.h  error.h  fasta.cpp  fasta.h  filter_duplicates.cpp  filter_duplicates.h  filter_edge_unaligned.cpp  filter_edge_unaligned.h  filter_homologs.cpp  filter_homologs.h  filter_internal_tandem_duplication.cpp  filter_internal_tandem_duplication.h  filter_long_gap.cpp  filter_long_gap.h  filter_min_support.cpp  filter_min_support.h  filter_mt.cpp  filter_mt.h  filter_small_fragments.cpp  filter_small_fragments.h  log.cpp  log.h  (+28 more)
test/: test.chosen.fasta  test.discarded_fusions.tsv  test.evidence_R1.fq  test.evidence_R2.fq  test.fa  test.fusion_list.tsv  test.gtf  test.per_base_coverage.tsv  test.psl  test.sam  test.split_reads.txt
test/test_idx/: test.2.bt2  test.3.bt2  test.4.bt2  test.rev.2.bt2
